<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:id="@+id/user_imageviews"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/user_profile"
                            android:onClick="openGallery"
                            />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/colorBlue"
                        android:textSize="20sp"
                        android:layout_marginBottom="5dp"
                        android:padding="10dp"
                        android:drawablePadding="5dp"
                        android:textAlignment="center"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100"
                        >

                        <EditText
                            android:id="@+id/user_firstname"
                            android:layout_width="0dp"
                            android:layout_weight="100"
                            android:layout_height="match_parent"
                            android:hint="@string/first_name"
                            android:textSize="20sp"
                            android:layout_marginBottom="20dp"
                            android:inputType="text"
                            android:textColorHint="@color/colorBlack"
                            android:padding="10dp"
                            android:textColor="@color/colorBlack"
                            android:drawableLeft="@drawable/ic_edit_grey_24dp"
                            android:drawableStart="@drawable/ic_edit_grey_24dp"
                            android:drawablePadding="5dp"
                            />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/user_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/last_name"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"
                        android:inputType="text"
                        android:textColorHint="@color/colorBlack"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_edit_grey_24dp"
                        android:drawableStart="@drawable/ic_edit_grey_24dp"
                        android:drawablePadding="5dp"
                        />

                    <EditText
                        android:id="@+id/user_age"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/age"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"
                        android:inputType="text"
                        android:textColorHint="@color/colorBlack"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_edit_grey_24dp"
                        android:drawableStart="@drawable/ic_edit_grey_24dp"
                        android:drawablePadding="5dp"
                        />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/your_gender"
                        android:textSize="20sp"
                        android:layout_marginBottom="5dp"
                        android:textColorHint="@color/colorWhite"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_person_grey_24dp"
                        android:drawableStart="@drawable/ic_person_grey_24dp"
                        android:drawablePadding="5dp"
                        />


                    <RadioGroup
                        android:id="@+id/profile_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginBottom="20dp"
                        >
                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="20sp"
                            android:textColor="@color/colorBlack"
                            android:text="@string/gender_male"
                            android:paddingRight="2pt"
                            android:paddingEnd="2pt"
                            android:paddingStart="0pt"
                            android:paddingLeft="0pt"
                            android:layout_marginRight="5pt"
                            android:layout_marginEnd="5pt"

                            />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="20sp"
                            android:textColor="@color/colorBlack"
                            android:paddingRight="2pt"
                            android:paddingEnd="2pt"
                            android:paddingStart="0pt"
                            android:paddingLeft="0pt"
                            android:layout_marginRight="0pt"
                            android:layout_marginEnd="0pt"
                            android:text="@string/gender_female"

                            />

                        <RadioButton
                            android:id="@+id/radio_others"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="20sp"
                            android:textColor="@color/colorBlack"
                            android:text="@string/gender_others"
                            />
                    </RadioGroup>



                    <EditText
                        android:id="@+id/user_current_weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/current_weight"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"
                        android:inputType="number"
                        android:textColorHint="@color/colorBlack"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_fitness_center_black_24dp"
                        android:drawableStart="@drawable/ic_fitness_center_black_24dp"
                        android:drawablePadding="5dp"
                        />

                    <EditText
                        android:id="@+id/user_target_weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/target_weight"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"
                        android:inputType="number"
                        android:textColorHint="@color/colorBlack"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_fitness_center_black_24dp"
                        android:drawableStart="@drawable/ic_fitness_center_black_24dp"
                        android:drawablePadding="5dp"
                        />

                    <EditText
                        android:id="@+id/user_preffered_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/preffered_location"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"
                        android:inputType="text"
                        android:textColorHint="@color/colorBlack"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_location_on_black_24dp"
                        android:drawableStart="@drawable/ic_location_on_black_24dp"
                        android:drawablePadding="5dp"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/button_update_profile"
                    android:background="@drawable/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/save_changes"
                    android:layout_gravity="center"
                    android:textSize="32sp"
                    android:textColorHint="@color/colorWhite"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>



    </ScrollView>

</LinearLayout>