<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_bluegreen"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:src="@drawable/gym"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:textSize="29sp"
                    android:layout_marginBottom="30dp"
                    />
            </LinearLayout>


            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="5dp"
                />


            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="5dp"
                />
        </LinearLayout>

        <Button
            android:background="@drawable/button_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_login"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:textColorHint="@color/colorBlue"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:onClick="home_page"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signup_message"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_marginBottom="0dp"
                android:onClick="signup_page"
                />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>